--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
-./btop
-./build
-./Code
-./dconf
-./discord
-./dlv
-./dots
-./dunst
-./Electron
-./go
-./gtk-3.0
-./keyd
-./light
-./nemo
-./obsidian
-./pavucontrol.ini
-./pulse
-./tofi
-./yay
+btop
+build
+Code
+dconf
+discord
+dlv
+dots
+dunst
+Electron
+go
+gtk-3.0
+keyd
+light
+nemo
+obsidian
+pavucontrol.ini
+pulse
+tofi
+yay
